# media_scanner

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
.kiro/specs/scan-progress-enhancement/: design.md  requirements.md  tasks.md
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  progress.rs  scanner.rs
