[package]
name = "media_scanner"
version = "0.1.0"
edition = "2021"
description = "High-performance media file scanner with parallel directory traversal"
authors = ["Media Scanner Team"]

[dependencies]
# Directory traversal
walkdir = "2.5"

# Parallel processing
rayon = "1.10"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Hashing
md-5 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2.0"

[dev-dependencies]
# Property-based testing
proptest = "1.5"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
